TAG: qcreports_db-3-5-3-15
DATE: 06/20/2007
STAFF: dbm
CHANGES:
1) Added BIB_RefsToIndex.py (TR8343)
2) Updated qcr.html with a link to the new report

TAG: qcreports_db-3-5-3-14
DATE: 06/19/2007
STAFF: dbm
CHANGES:
1) Change sort column to be creation_date on MRK_Alleles.sql (TR8351)

TAG: qcreports_db-3-5-3-13
DATE: 06/18/2007
STAFF: dbm
CHANGES:
1) Added GXD_EarlyPapers.py (TR8343)
2) Updated qcr.html with a link to the new report

TAG: qcreports_db-3-5-3-12
DATE: 06/12/2007
STAFF: 
CHANGES:
1) added - mgd/MGI_GenesAndPseudogenesWithSequence.py
2) updated qcr.html with above

TAG: qcreports_db-3-5-3-11
DATE: 06/08/2007
STAFF: dbm
CHANGES:
1) Remove the first 2 reports from GXD_SpecNoAge.py (TR8339)

TAG: qcreports_db-3-5-3-10
DATE: 06/07/2007
STAFF: dbm
CHANGES:
1) Modified GXD_FullCodeable.py (TR8235 and TR8289)

TAG: qcreports_db-3-5-3-9
DATE: 06/01/2007
STAFF: dbm
CHANGES:
1) Added GXD_WithdrawnMarker.py (TR8212)
2) Remove GXD_DupGenotype.rpt from the GXD section of qcr.html because
   it is already in the Alleles section (per Connie)

TAG: qcreports_db-3-5-3-8
DATE: 05/30/2007
STAFF: dbm
CHANGES:
1) Added a third report to GXD_FullCodeable.py (TR8182)
2) Added a link to the new report to qcr.html

TAG: qcreports_db-3-5-3-7
DATE: 05/18/2007
STAFF: sc
CHANGES:
1) MRK_ENSEMBLnoGeneModel.py and VEGA version - filter out
   non-official markers.

TAG: qcreports_db-3-5-3-6
DATE: 05/17/2007
STAFF: sc
CHANGES: 
1) TR8304 ensembl release 44 - mgd/MRK_NoENSEMBL.py - update to exclude 
obsoletes and include only protein_coding and pseudogene
2) TR8288 - new reports:
a) mgd/MRK_MultMarkerGeneModels.sql - new
b) mgd/MRK_ENSEMBLnoGeneModel.py - new
c) mgd/MRK_VEGAnoGeneModel.py - new

TAG: qcreports_db-3-5-3-5
DATE: 05/08/2007
STAFF: dbm
CHANGES:
1) Another fixed to PRB_StrainJAX5.sql: Restore original report and detect
   any marker/allele record changes (per acv).

TAG: qcreports_db-3-5-3-4
DATE: 05/07/2007
STAFF: dbm
CHANGES: