@@ -138,11 +138,9 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecTheiler.sql.rpt">Specimens annotated to structures of > 1 Theiler Stage</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecTheilerAge.rpt">GXD Specimens with incompatible Theiler stages and ages</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_MechDev.rpt">Mech Dev papers to full code</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_GeneExprPatterns.rpt">Gene Expr Patterns papers to full code</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_DevBiol.rpt">Dev Biol papers to full code</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_Development.rpt">Development papers to full code</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_GeneExprPatternsandBrainResGeneExprPatterns.rpt">Gene Expr Patterns papers to full code</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_DevBiolandDevelopment.rpt">Dev Biol and Development papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_DevDyn.rpt">Dev Dyn papers to full code</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_ProcNatlAcadSciUSA.rpt">Proc Natl Acad Sci U S A papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable.rpt">Markers that have not been full coded and that have full codeable papers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable2.rpt">Papers containing genes that are not in the full coded portion of the database</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_EarlyPapers.rpt">Early paper for popular genes</A>
