@@ -1,3 +1,10 @@
+TAG: qcreports_db-3-5-3-16
+DATE: 07/09/2007
+STAFF: sc
+CHANGES: TR8349
+1) Updated GXD_FullCode.py to reorganize these reports
+2) Updated qcr.html accordingly
+
 TAG: qcreports_db-3-5-3-15
 DATE: 06/20/2007
 STAFF: dbm
